<resources>
    <string name="app_name">To-Do List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="proceed_button">Proceed Button</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet">Not Registered Yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already Registered?</string>
    <string name="tasks">Tasks</string>
    <string name="add_task_button">Add task button</string>
    <string name="place_holder">Place Holder</string>
    <string name="check_box">Check box</string>
</resources>